# avcmt-py

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  pyproject.toml  setup.cfg
.github/workflows/: pre-commit.yml  release.yaml
avcmt/: __init__.py  ai.py  cli.py  commit.py  release.py  utils.py
avcmt/cli/: commit.py  docs.py  main.py  release.py
avcmt/modules/: commit_generator.py  doc_generator.py  release_manager.py
avcmt/providers/: __init__.py  openai.py  pollinations.py
scripts/: apache2.0.py  check.py  clean.py  format.py  helper.py  lintfix.py  preflight.py  semrel.py  setup.py
