[tool.poetry]
name = "avcmt"
version = "0.1.0"
description = "avcmt: AI-Powered Semantic Release Style Git Commit Automation for Pyhon Project."
authors = ["Andy Vandaric <andyvandaric@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "avcmt" }]
include = ["avcmt/*"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.32"
jinja2 = "^3.1.4"
python-dotenv = "^1.0.1"

[tool.poetry.scripts]
avcmt = "avcmt.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
